@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.5
-Date: 2015-02-20
-Packaged: 2015-02-20 16:45:12 UTC; Dylan.Beaudette
+Version: 1.5-2
+Date: 2015-02-24
+Packaged: 2015-02-24 22:45:14 UTC; rforge
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
@@ -11,10 +11,13 @@ License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.15.0), aqp
 Imports: plyr, Hmisc, RCurl, XML, sp
-Suggests: lattice, XMLSchema, SSOAP, dismo, raster, RODBC, rgdal,
-        jsonlite
+Suggests: lattice, XMLSchema, SSOAP, dismo, raster, rgdal, jsonlite,
+        RODBC
 Repository: CRAN
 Additional_repositories: http://www.omegahat.org/R
 URL: http://aqp.r-forge.r-project.org/
+Repository/R-Forge/Project: aqp
+Repository/R-Forge/Revision: 1010
+Repository/R-Forge/DateTimeStamp: 2015-02-24 22:28:10
+Date/Publication: 2015-02-25 08:12:45
 NeedsCompilation: no
-Date/Publication: 2015-02-21 01:33:16
