@@ -1,49 +1,49 @@
-e06d135f8a071e5fae7366166230dd7c *DESCRIPTION
+4c065c9841db725dba386b27d19e32cc *DESCRIPTION
 02f78cd1af9fbe60bb4f7449509622cc *NAMESPACE
-40d0a6c20b38232bcbd2a35ade091a0e *NEWS
+74d3cd166fdce49ecc645902ac52d5ee *NEWS
 9fd6591970966b57217c166cdbf563c5 *R/AAAA.R
 499e6ab311e558b2aef3f4b2b7c0d0e2 *R/MUKEYS_by_ll_bbox.R
-0c065d2b5b6503a874f58696ad844f97 *R/SDA_query.R
-b7b2ba3cfebaf3c9e587f029e87a1173 *R/SSURGO_spatial_query.R
+8ce7265b8afc9812293d6c4fc1f9f46a *R/SDA_query.R
+5345a054bcfc6c07b6a4e25df022ec00 *R/SSURGO_spatial_query.R
 08371f15cee01247e6ea9350c218fc01 *R/fetchHenry.R
 b1a2e2a8058443693e0af3c8bf5ca15d *R/fetchKSSL.R
-c2ab5e0aba118ad3d82f09682fd7a8c8 *R/fetchNASIS.R
+ac60cdb9f60af65e25baa8cc2dfa964c *R/fetchNASIS.R
 20215cce0ba5c9adb4d2849d86858701 *R/fetchNASISLabData.R
 44eb45d2ac563f5bff2b59e2e839c0c3 *R/fetchOSD.R
-af447326c41a450b2aab04b32d531f3e *R/fetchPedonPC.R
+759130f471b9bd43f6e736bc49ba5cc9 *R/fetchPedonPC.R
 06c8d724ad845d8120d0ac5d71091a7d *R/fetchRaCA.R
 c096e77a736566404f22faf2428dea75 *R/fetchSCAN.R
 0c6bb0d445217498d059d97551410162 *R/getHzErrorsNASIS.R
 fe4d28d57454b275b283d4194b09287c *R/getHzErrorsPedonPC.R
-cf88967939cd8af99148e2de66978910 *R/get_colors_from_NASIS_db.R
+877707fba56f7dd6621ede6dad9355dd *R/get_colors_from_NASIS_db.R
 bb78147340da8fc5242f4d0bcdc6fc07 *R/get_colors_from_pedon_db.R
-4d9c3b1c9eddc7fcd44998eeb86264a6 *R/get_extended_data_from_NASIS_db.R
+28c41ffbc8ef8ed95faf4389a6784dde *R/get_extended_data_from_NASIS_db.R
 8fb39b173f4f87064b5e71b58530179c *R/get_extended_data_from_pedon_db.R
-a73e46daeedf47b42853de163e2d3318 *R/get_hz_data_from_NASIS_db.R
+725561ff8b9ff0d40f509dfaaf5fe6ae *R/get_hz_data_from_NASIS_db.R
 47824c0683e4fc8283badbd656d3c796 *R/get_hz_data_from_pedon_db.R
-ef0e1bf8029337611f317b57bb5f5548 *R/get_lablayer_data_from_NASIS_db.R
-0299eebf2638dd49e60e9d27c93f4a2a *R/get_labpedon_data_from_NASIS_db.R
-93b56664995be286ae1a40b7c9847298 *R/get_site_data_from_NASIS_db.R
+bbd9ea3abfb887ed7330b3a67452a093 *R/get_lablayer_data_from_NASIS_db.R
+e7ac903144ac81e7e6f9f86900c990c3 *R/get_labpedon_data_from_NASIS_db.R
+6c9cc5615c3f017a4a688327d94330d8 *R/get_site_data_from_NASIS_db.R
 ce1f99a3a20daa9d5f571c6140b5502b *R/get_site_data_from_pedon_db.R
-857951486b0d92096e69a8691daa3f2f *R/get_text_notes_from_NASIS_db.R
+9466ed43146f91e6884a9ae532fb9c42 *R/get_text_notes_from_NASIS_db.R
 9e13d5eee17fe62e62732f8bc22dcf98 *R/get_veg_from_AK_Site.R
 e785d3144cc4bf72282f43520d1e40cc *R/get_veg_from_MT_veg_db.R
 d40110148639c37b287fb37d17c09fd5 *R/get_veg_from_NPS_PLOTS_db.R
 250f638642aa74b4fe5052a4e9c0f6fd *R/get_veg_other_from_MT_veg_db.R
 a661f99c3e8ef493cd557a85189600da *R/get_veg_species_from_MT_veg_db.R
-7291118e7a213b6cc2b476780fd17242 *R/mapunit_geom_by_ll_bbox.R
+5774af75bf3a413976e12ec7c8868b2d *R/mapunit_geom_by_ll_bbox.R
 911b007cbdfe66931f27fcf00e51dd45 *R/mix_and_clean_colors.R
-6823577ba49903539a84ea419cfab0e5 *R/nasis_component_data.R
-14685a7cc5af7bdfefdb831d29b4a908 *R/seriesExtent.R
+642dcc7351192395d5a9a233fe000527 *R/nasis_component_data.R
+cdc69f099ebca5b59a31b114cab422f5 *R/seriesExtent.R
 7f69156d0ecfa83de717f8e32b2f8ba7 *R/utils.R
 101bafddf902133376f98a797f9ad3f3 *TODO
-23c4de98e2057e9c042f4c88f30b7293 *data/andic.subset.rda
-c4288e71a79e56b5dddf2c6087852060 *data/cisne.rda
-d311c4af4b532fcb084be336a9773be7 *data/gSSURGO.chunk.rda
-365b7f8390b26b07ab771e2e7c167b02 *data/gopheridge.rda
-5514adabc9cdedbfd66c6a2df3af9284 *data/loafercreek.rda
+8719bf6f7f1fe46b65c06cd7a9bd9794 *data/andic.subset.rda
+8805669a17037aab54ea327e3fb9c82b *data/cisne.rda
+8cd641a827585cbca603205d3f4dad1b *data/gSSURGO.chunk.rda
+9d121bf49a59ac3122570b80e6f8011b *data/gopheridge.rda
+05550a5855ec29c35bf61ddcf5d23bb9 *data/loafercreek.rda
 6cb92e590865abee517df46eea428ffb *man/MUKEYS_by_ll_bbox.Rd
-38ce19f761dad4d1958d1d6a9d01efa4 *man/SDA_query.Rd
+7450e470b5983e66945d0a2336af34e4 *man/SDA_query.Rd
 9eef37167f7991935f54320be5e855d3 *man/SSURGO_spatial_query.Rd
 ed7691a39d5b23e5f7d36e5d2979f02f *man/fetchKSSL.Rd
 67a55455e365b840db61603c2fa5fb6b *man/fetchNASIS.Rd
